update code include: add paypalEmail, block user
